# Test

./: Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_org_settings.py
backend/app/: main.py
backend/app/api/: routes.py  ui.py
backend/app/auth/: security.py
backend/app/core/: config.py  logging.py  request_id.py
backend/app/db/: session.py
backend/app/excel/: exporter.py
backend/app/jobs/: celery_app.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: common.py
backend/app/services/: finance.py  seed.py
backend/app/templates/: index.html
backend/tests/: test_api_integration.py  test_excel.py  test_finance.py  test_ui.py
docs/: PRD.md  api.md  architecture.md  data_model.md  excel_pack_spec.md  finance_conventions.md  index.md  mkdocs.yml  risks.md  roadmap.md
docs/council/: backend.md  data_architect.md  devops.md  fpa.md  frontend.md  private_credit.md  product.md  qa.md  writer.md
docs/runbooks/: backup.md  deploy.md  restore.md
examples/: demo_walkthrough.md
examples/csv_templates/: actuals_template.csv
examples/sample_company_actuals/: atlas_labs_actuals.csv
scripts/: verify_backup.sh
